Closed Bug 1717599 Opened 3 years ago Closed 3 years ago

21f95d1f0e316e2bc8000613a0350cb1102572b3 causes crash when attempting to start any profile

Categories

(Core :: Security: Process Sandboxing, defect, P1)

Firefox 91
x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
91 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox89 --- unaffected
firefox90 --- unaffected
firefox91 --- fixed

People

(Reporter: kyle.devir, Assigned: gerard-majax)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Falkon/3.1.0 Chrome/87.0.4280.144 Safari/537.36

Steps to reproduce:

Updated and restarted Firefox Nightly when asked to update.

Profile manager comes up. Attempted to run my usual profile.

Also tried with a fresh profile.

Actual results:

Instantly crashes, with both current and fresh profiles.

Expected results:

Profile runs.

Testing older versions via http://ftp.mozilla.org/pub/firefox/nightly/2021/06/:

2021-06-21-09-42-23-mozilla-central works

2021-06-21-21-35-00-mozilla-central fails

I should have also noted that I bisected to this commit via mozregression, and got this info:

 2:04.13 INFO: Narrowed integration regression window from [b45799dc, 21f95d1f] (4 builds) to [31fe68d7, 21f95d1f] (2 builds) (~1 steps left)
 2:04.13 INFO: No more integration revisions, bisection finished.
 2:04.13 INFO: Last good revision: 31fe68d72de89273e47b5b5b600c34797c2287c3
 2:04.13 INFO: First bad revision: 21f95d1f0e316e2bc8000613a0350cb1102572b3
 2:04.13 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=31fe68d72de89273e47b5b5b600c34797c2287c3&tochange=21f95d1f0e316e2bc8000613a0350cb1102572b3
Has Regression Range: --- → yes
Keywords: crash, regression
OS: Unspecified → Linux
Regressed by: 1672421

Can you share more infos ? Crash report?

Flags: needinfo?(kyle.devir)

(In reply to Alexandre LISSY :gerard-majax from comment #3)

Can you share more infos ? Crash report?

Where can I find the crash report/s?

Flags: needinfo?(kyle.devir)

(In reply to Kyle De'Vir from comment #4)

(In reply to Alexandre LISSY :gerard-majax from comment #3)

Can you share more infos ? Crash report?

Where can I find the crash report/s?

about:crashes

The Bugbug bot thinks this bug should belong to the 'Toolkit::Startup and Profile System' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → Startup and Profile System
Product: Firefox → Toolkit

Set release status flags based on info from the regressing bug 1672421

(In reply to Alexandre LISSY :gerard-majax from comment #5)

(In reply to Kyle De'Vir from comment #4)

(In reply to Alexandre LISSY :gerard-majax from comment #3)

Can you share more infos ? Crash report?

Where can I find the crash report/s?

about:crashes

Is this enough?

https://crash-stats.mozilla.org/report/index/0515836f-d16a-43ff-89c5-b4eca0210622

Would be interesting to know if XDG_CONFIG_HOME or XDG_CONFIG_DIRS are set on your machine.

(In reply to Kyle De'Vir from comment #8)

(In reply to Alexandre LISSY :gerard-majax from comment #5)

(In reply to Kyle De'Vir from comment #4)

(In reply to Alexandre LISSY :gerard-majax from comment #3)

Can you share more infos ? Crash report?

Where can I find the crash report/s?

about:crashes

Is this enough?

https://crash-stats.mozilla.org/report/index/0515836f-d16a-43ff-89c5-b4eca0210622

Yes, by any chance, can you share env result here?

Flags: needinfo?(kyle.devir)

Hmmmm, also, if it's any use, XDG_CONFIG_HOME doesn't exist in my environment. It never has, as far as I'm aware. Nothing I've ever used before seems to depend on it being set, either.

 valmar  …  media  valmar  IronWolfRAID1  env | grep XDG
XDG_CONFIG_DIRS=/home/valmar/.config/kdedefaults:/run/media/valmar/DataSSD/kde/usr/etc/xdg:/etc/xdg:
XDG_SEAT=seat0
XDG_SESSION_TYPE=wayland
XDG_CURRENT_DESKTOP=KDE
XDG_ACTIVATION_TOKEN=kwin-30
XDG_SESSION_CLASS=user
XDG_VTNR=1
XDG_SESSION_ID=19
XDG_RUNTIME_DIR=/run/user/1000
XDG_DATA_DIRS=/run/media/valmar/DataSSD/kde/usr/share:/usr/share:

(In reply to Gian-Carlo Pascutto [:gcp] from comment #9)

Would be interesting to know if XDG_CONFIG_HOME or XDG_CONFIG_DIRS are set on your machine.

XDG_CONFIG_DIRS is, as shown above.

Flags: needinfo?(kyle.devir)
Severity: -- → S2
Status: UNCONFIRMED → NEW
Component: Startup and Profile System → Security: Process Sandboxing
Ever confirmed: true
Priority: -- → P1
Product: Toolkit → Core
Hardware: Unspecified → x86_64
Assignee: nobody → lissyx+mozillians

(In reply to Kyle De'Vir from comment #12)

(In reply to Gian-Carlo Pascutto [:gcp] from comment #9)

Would be interesting to know if XDG_CONFIG_HOME or XDG_CONFIG_DIRS are set on your machine.

XDG_CONFIG_DIRS is, as shown above.

Thanks, we know what is going on, I'm going to try and fix that soonish!

So if you change XDG_DATA_DIRS and XDG_CONFIG_DIRS to not include an empty string, it should unblock you :)

Flags: needinfo?(kyle.devir)

(In reply to Alexandre LISSY :gerard-majax from comment #14)

So if you change XDG_DATA_DIRS and XDG_CONFIG_DIRS to not include an empty string, it should unblock you :)

That worked. Cheers. :)

Flags: needinfo?(kyle.devir)

Thanks for reporting it early and providing actionable feedback, the patch is landing now, it should make it to the next nightly I hope, and we now have test coverage to avoid regressing this ; when it lands, you should be able to set back your env variable as they were :)

Flags: needinfo?(kyle.devir)
Pushed by alissy@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6ef71f8adeb8
Ensure XDG_CONFIG_DIRS / XDG_CONFIG_HOME are non empty r=gcp
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch

(In reply to Alexandre LISSY :gerard-majax from comment #17)

Thanks for reporting it early and providing actionable feedback, the patch is landing now, it should make it to the next nightly I hope, and we now have test coverage to avoid regressing this ; when it lands, you should be able to set back your env variable as they were :)

Ah, sorry for not replying ~ Firefox now happily handles empty strings in these environment variables :)

Flags: needinfo?(kyle.devir)
Crash Signature: [@ mozilla::detail::nsTStringRepr<T>::Last | mozilla::SandboxBroker::Policy::FixRecursivePermissions]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: