Bug 1717599 - Ensure XDG_CONFIG_DIRS / XDG_CONFIG_HOME are non empty r=gcp

Differential Revision: https://phabricator.services.mozilla.com/D118483